--- a/src/components/AlbumSection/albumSection.module.css
+++ b/src/components/AlbumSection/albumSection.module.css
@@ -1,22 +1,19 @@
 .section {
-  margin-bottom: 32px;
-  margin-left: 10px;
-  align-self: start;
+  margin: 32px 0;
 }
 
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 16px;
-  padding: 6px;
+  margin-bottom: 12px;
+  margin: 4px;
 }
 
-.wrapper {
-  position: relative;
+.grid {
   display: flex;
-  align-items: flex-start;
-  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 16px;
 }
 
 .carousel {
