--- a/src/components/AlbumSection/albumSection.module.css
+++ b/src/components/AlbumSection/albumSection.module.css
@@ -1,5 +1,6 @@
 .section {
   margin: 32px 0;
+  align-items: start;
 }
 
 .header {
@@ -8,6 +9,7 @@
   align-items: center;
   margin-bottom: 12px;
   margin: 4px;
+  margin-left: 48px;
 }
 
 .grid {
